@@ -1662,9 +1662,6 @@ want to remove all seeding torrents?")):
         self.save_column_widths()
         self.save_window_settings()
         self.save_tabs_order()
-        enabled_plugins = ':'.join(self.plugins.get_enabled_plugins())
-        self.config.set('enabled_plugins', enabled_plugins)
-        self.config.save()
         self.plugins.shutdown_all_plugins()
         #for the sake of windows, hide tray_icon
         self.tray_icon.set_visible(False)
